# sequoia-boost

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
crates/sequoia-boost/: Cargo.toml
crates/sequoia-boost/benches/: training.rs
crates/sequoia-boost/examples/: bench_compare.rs  binary_classification.rs  constraints.rs  custom_objective.rs  model_io.rs  multiclass.rs  profile.rs  ranking.rs  shap.rs  train_regression.rs
crates/sequoia-boost/src/: error.rs  lib.rs
crates/sequoia-boost/src/booster/: gblinear.rs  mod.rs
crates/sequoia-boost/src/config/: mod.rs  params.rs
crates/sequoia-boost/src/data/: dmatrix.rs  ghist.rs  loaders.rs  meta.rs  mod.rs  quantile.rs
crates/sequoia-boost/src/learner/: cv.rs  mod.rs  model.rs  shap.rs  train.rs
crates/sequoia-boost/src/metric/: mod.rs
crates/sequoia-boost/src/model/: mod.rs  xgboost_json.rs
crates/sequoia-boost/src/objective/: classification.rs  count.rs  custom.rs  mod.rs  multiclass.rs  ranking.rs  regression.rs
crates/sequoia-boost/src/tree/: constraints.rs  gain.rs  mod.rs  regtree.rs  sampler.rs
crates/sequoia-boost/src/tree/builder/: exact.rs  hist.rs  mod.rs
crates/sequoia-boost/src/tree/hist/: mod.rs
crates/sequoia-boost/tests/: parity.rs  properties.rs
fixtures/: .gitkeep
scripts/: README.md  bench_xgb.py  gen_fixtures.py
