[workspace]
resolver = "2"
members = ["crates/sequoia-boost"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0"
repository = "https://github.com/pgarrett-scripps/sequoia-boost"
authors = ["Patrick Garrett <pgarrett@scripps.edu>"]
description = "A faithful, fast, pure-Rust reimplementation of XGBoost gradient boosting"
keywords = ["gradient-boosting", "xgboost", "machine-learning", "decision-trees", "boosting"]
categories = ["science", "algorithms"]

[workspace.dependencies]
rayon = "1.10"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
num-traits = "0.2"
rand = "0.8"
rand_pcg = "0.3"

# Dev
criterion = "0.5"
proptest = "1.5"
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
